--- a/index.html
+++ b/index.html
@@ -19,16 +19,54 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                  Contacts
+                  Work
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                  Settings
+                  Contact
                 </a>
             </li>
         </ul>
     </nav>
+
+    <section id='welcome-section'>
+      <div class="welcome-title">
+        <h1 class="heading">Hey I am Omar & Saadat</h1>
+        <p class="sub-heading">Aspiring Web Developers</p>
+      </div>
+    </section>
+
+    <section id='projects'>
+      <h2>
+        These are some of my projects
+      </h2>
+      <a href="https://wwww.google.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>Tribute Page</p>
+      </a>
+      <a href="https://wwww.facebook.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="">
+        <p>Random Quote Machine</p>
+      </a>
+      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+        <p>JS Calculator</p>
+      </a>
+      <a href="https://wwww.microsoft.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="">
+        <p>Project 4</p>
+      </a>
+      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="">
+        <p>Project 5</p>
+      </a>
+      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="">
+        <p>Project 6</p>
+      </a>
+
+    </section>
     <!--
 
     Hello Camper!
