--- a/index.html
+++ b/index.html
@@ -9,64 +9,85 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <nav class="navbar navbar-expand-sm bg-light ">
+    <nav class="navbar navbar-expand-sm bg-light" id="navbar">
   
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto text-white" style="font-size: 1.5rem;">
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link text-white" href="#">
                   About
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link text-white" href="#">
                   Work
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link text-white" href="#">
                   Contact
                 </a>
             </li>
         </ul>
     </nav>
+    
+    <div class="w-100 h-100">
 
-    <section id='welcome-section'>
-      <div class="welcome-title">
-        <h1 class="heading">Hey I am Omar & Saadat</h1>
-        <p class="sub-heading">Aspiring Web Developers</p>
-      </div>
-    </section>
+      <section id='welcome-section'>
+        <div class="welcome-title text-center h-100 align-middle  vertical-center">
+          <div class="container">
+            <h1 class="heading">Hey I am Omar & Saadat</h1>
+            <p class="sub-heading">Aspiring Web Developers</p>
+          </div>
+        </div>
+      </section>
 
-    <section id='projects'>
-      <h2>
-        These are some of my projects
-      </h2>
-      <a href="https://wwww.google.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
-        <p>Tribute Page</p>
-      </a>
-      <a href="https://wwww.facebook.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="">
-        <p>Random Quote Machine</p>
-      </a>
-      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
-        <p>JS Calculator</p>
-      </a>
-      <a href="https://wwww.microsoft.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="">
-        <p>Project 4</p>
-      </a>
-      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="">
-        <p>Project 5</p>
-      </a>
-      <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
-        <img width="100%" height="300" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="">
-        <p>Project 6</p>
-      </a>
+      <section id='projects'>
+        <h1 class="text-white text-center" style="margin-bottom: 6rem;">
+          <span class="border-bottom">These are some of my projects</span>
+        </h1>
+        <div class="row" >
+          <div class="col-4">
+            <a href="https://wwww.google.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+              <p class=" text-white text-center">Tribute Page</p>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://wwww.facebook.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="">
+              <p class=" text-white text-center">Random Quote Machine</p>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+              <p class=" text-white text-center">JS Calculator</p>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <a href="https://wwww.microsoft.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="">
+              <p class=" text-white text-center">Project 4</p>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="">
+              <p class=" text-white text-center">Project 5</p>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://wwww.twitter.com" class="project-tile" target="_blank">
+              <img width="100%" height="350" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="">
+              <p class=" text-white text-center">Project 6</p>
+            </a>
+          </div>
+        </div>
 
-    </section>
+      </section>
+    </div>
     <!--
 
     Hello Camper!
