--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
         </div>
 
       </section>
+
+      <footer>
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+        <div class='footer-links'>
+          <a href="https://github.com" class="profile-link">Github</a>
+          <a href="https://facebook.com" class="profile-link">Facebook</a>
+          <a href="https://linkedin.com" class="profile-link">Linkedin</a>
+          <a href="https://github.com" class="profile-link">Send a mail</a>
+          <a href="https://github.com" class="profile-link">Call me</a>
+        </div>
+      </footer>
     </div>
     <!--
 
