--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   
         <ul class="navbar-nav ml-auto text-white" style="font-size: 1.5rem;">
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">
+                <a class="nav-link text-white" href="#welcome-section">
                   About
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">
+                <a class="nav-link text-white" href="#projects">
                   Work
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">
+                <a class="nav-link text-white" href="#contact">
                   Contact
                 </a>
             </li>
@@ -88,15 +88,15 @@
 
       </section>
 
-      <footer>
+      <footer id='contact'>
         <h2>Let's work together...</h2>
         <p>How do you take your coffee?</p>
         <div class='footer-links'>
-          <a href="https://github.com" class="profile-link">Github</a>
-          <a href="https://facebook.com" class="profile-link">Facebook</a>
-          <a href="https://linkedin.com" class="profile-link">Linkedin</a>
-          <a href="https://github.com" class="profile-link">Send a mail</a>
-          <a href="https://github.com" class="profile-link">Call me</a>
+          <a href="https://github.com" id='profile-link' class="link" target="_blank">Github</a>
+          <a href="https://facebook.com" class="link" target="_blank">Facebook</a>
+          <a href="https://linkedin.com" class="link" target="_blank">Linkedin</a>
+          <a href="https://github.com" class="link" target="_blank">Send a mail</a>
+          <a href="https://github.com" class="link" target="_blank">Call me</a>
         </div>
       </footer>
     </div>
