make footer sticky

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <nav class="navbar navbar-expand-sm bg-light" id="navbar">
+    <nav class="navbar navbar-expand-sm bg-light fixed-top" id="navbar">
   
         <ul class="navbar-nav ml-auto text-white" style="font-size: 1.5rem;">
             <li class="nav-item">
